--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .wrapper{
-
+	max-width: 1200px;
 	padding:  0 20px;
 	margin: auto;
 	background-color: #313131;
@@ -129,7 +129,11 @@
 }
 
 .infoAboutCompany a:hover {
-	color: #a7c31c;
+	color: #a1bc01;
+}
+
+.infoAboutCompany a:active {
+	color: #6b7d02;
 }
 
 .titleDetails{
@@ -240,7 +244,7 @@ footer{
 .mainContainer{
 	font-family: Georgia;
     margin: auto;
-    width: 960px;
+    max-width: 960px;
     padding: 0 20px 20px 20px;
     border: 1px solid black;
     font-weight: normal;
@@ -267,7 +271,11 @@ footer{
 
 .link a:hover{
 	cursor: pointer;
-	color: #a7c31c !important;
+	color: #a1bc01 !important;
+}
+
+.link a:active{
+	color: #6b7d02 !important;
 }
 
 .doubleQuoteSymbol{
@@ -331,7 +339,11 @@ h5{
 }
 
 .firstBlog a:hover, .secondBlog a:hover {
-	color: #a7c31c !important;
+	color: #a1bc01 !important;
+}
+
+.firstBlog a:active, .secondBlog a:active {
+	color: #6b7d02 !important;
 }
 
 form {
@@ -375,7 +387,7 @@ form textarea {
 }
 
 form button:hover {
-	background-color: #a7c31c;
+	background-color: #a1bc01;
 } 
 
 .linkedIn span {
@@ -432,7 +444,11 @@ form button:hover {
 }
 
 .socialIcon:hover p {
-	color: #a7c31c;
+	color: #a1bc01;
+}
+
+.socialIcon:active p {
+	color: #6b7d02;
 }
 
 .copyrightConteiner {
@@ -444,6 +460,34 @@ form button:hover {
 	font-size: 12px;
 	color: #999999;
 	border-top: 1px solid #3a3a3a;
+}
+
+input:hover {
+	box-shadow: 0 0 5px white;
+}
+
+textarea:hover {
+	box-shadow: 0 0 5px white;
+}
+
+.headerButton:hover{
+	background-color: #e4e0e0;
+}
+
+.carousel-indicators li:hover{
+	opacity: 1;
+}
+
+form button:active {
+	padding: calc(.25em + 1px) .5em calc(.25em - 1px);
+ 	border-color: rgba(177,159,0,1);
+  	box-shadow: inset 0 -1px 1px rgba(0,0,0,.1), inset 0 1px 2px rgba(0,0,0,.3), inset 0 0 0 60px rgba(255,255,0,.45);
+}
+
+.headerButton:active {
+	border-color: rgba(177,159,0,1);
+  	box-shadow: inset 0 -1px 1px rgba(0,0,0,.1), inset 0 1px 2px rgba(0,0,0,.3), inset 0 0 0 60px rgba(255,255,0,.45);
+  	font-size: 1.30rem;
 }
 
 @media (max-width: 960px){
